--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">66,765</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">37,091</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testNG_Scripts.profileCreationSuite3_TestNG</td><td><a href="#m0">PCApp_TestCase_002_C12</a></td><td rowspan="1">1523339250415</td><td rowspan="1">6596</td></tr><tr class="passedeven"><td><a href="#m1">PCApp_TestCase_002_C13</a></td><td rowspan="1">1523339259660</td><td rowspan="1">52491</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testNG_Scripts.PCApp_Script_006_A01</td><td><a href="#m0">run</a></td><td rowspan="1">1526025008205</td><td rowspan="1">17456</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testNG_Scripts.profileCreationSuite3_TestNG#PCApp_TestCase_002_C12</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testNG_Scripts.profileCreationSuite3_TestNG#PCApp_TestCase_002_C13</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">testNG_Scripts.PCApp_Script_006_A01#run</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
