--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\srita\AppData\Local\Temp\testng-eclipse-262921581\testng-customsuite.xml</span>
+                    <span>C:\Users\srita\AppData\Local\Temp\testng-eclipse-126178388\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testNG_Scripts.profileCreationSuite3_TestNG" hash-for-method="PCApp_TestCase_002_C12">PCApp_TestCase_002_C12</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testNG_Scripts.profileCreationSuite3_TestNG" hash-for-method="PCApp_TestCase_002_C13">PCApp_TestCase_002_C13</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testNG_Scripts.PCApp_Script_006_A01" hash-for-method="run">run</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,21 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testNG_Scripts.profileCreationSuite3_TestNG</span>
+              <span class="class-name">testNG_Scripts.PCApp_Script_006_A01</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="PCApp_TestCase_002_C12">
-                  </a> <!-- PCApp_TestCase_002_C12 -->
-                  <span class="method-name">PCApp_TestCase_002_C12</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="PCApp_TestCase_002_C13">
-                  </a> <!-- PCApp_TestCase_002_C13 -->
-                  <span class="method-name">PCApp_TestCase_002_C13</span>
+                  <a name="run">
+                  </a> <!-- run -->
+                  <span class="method-name">run</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\srita\AppData\Local\Temp\testng-eclipse-262921581\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\srita\AppData\Local\Temp\testng-eclipse-126178388\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +144,7 @@
 &lt;suite thread-count=&quot;-1&quot; guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testNG_Scripts.profileCreationSuite3_TestNG&quot;/&gt;
+      &lt;class name=&quot;testNG_Scripts.PCApp_Script_006_A01&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -196,20 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'PCApp_TestCase_002_C13')
-data.setCell(0, 2, 'testNG_Scripts.profileCreationSuite3_TestNG')
-data.setCell(0, 3, 52491);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'PCApp_TestCase_002_C12')
-data.setCell(1, 2, 'testNG_Scripts.profileCreationSuite3_TestNG')
-data.setCell(1, 3, 6596);
+data.setCell(0, 1, 'run')
+data.setCell(0, 2, 'testNG_Scripts.PCApp_Script_006_A01')
+data.setCell(0, 3, 17456);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 59 seconds</span>
+              <span class="suite-total-time">Total running time: 17 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -235,30 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testNG_Scripts.profileCreationSuite3_TestNG</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testNG_Scripts.PCApp_Script_006_A01</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">preConditions</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">PCApp_TestCase_002_C12</span>
-                <span class="method-start">1153 ms</span>
+                <span class="method-name">run</span>
+                <span class="method-start">16300 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">postConditions</span>
-                <span class="method-start">7753 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">preConditions</span>
-                <span class="method-start">10320 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">PCApp_TestCase_002_C13</span>
-                <span class="method-start">10398 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">postConditions</span>
-                <span class="method-start">62897 ms</span>
+                <span class="method-start">33759 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
