--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69717b">  <td>18/04/10 11:17:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="profileCreationSuite3_TestNG.PCApp_TestCase_002_C12()[pri:0, instance:testNG_Scripts.profileCreationSuite3_TestNG@1e88b3c]">PCApp_TestCase_002_C12</td> 
-  <td>main@1690287238</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>18/04/10 11:17:39</td>   <td>9245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="profileCreationSuite3_TestNG.PCApp_TestCase_002_C13()[pri:0, instance:testNG_Scripts.profileCreationSuite3_TestNG@1e88b3c]">PCApp_TestCase_002_C13</td> 
-  <td>main@1690287238</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>18/04/10 11:17:37</td>   <td>6600</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;profileCreationSuite3_TestNG.postConditions()[pri:0, instance:testNG_Scripts.profileCreationSuite3_TestNG@1e88b3c]">&lt;&lt;postConditions</td> 
-<td>&nbsp;</td>  <td>main@1690287238</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>18/04/10 11:18:32</td>   <td>61744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;profileCreationSuite3_TestNG.postConditions()[pri:0, instance:testNG_Scripts.profileCreationSuite3_TestNG@1e88b3c]">&lt;&lt;postConditions</td> 
-<td>&nbsp;</td>  <td>main@1690287238</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>18/04/10 11:17:29</td>   <td>-1153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;profileCreationSuite3_TestNG.preConditions()[pri:0, instance:testNG_Scripts.profileCreationSuite3_TestNG@1e88b3c]">&gt;&gt;preConditions</td> 
-<td>&nbsp;</td>  <td>main@1690287238</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>18/04/10 11:17:39</td>   <td>9167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;profileCreationSuite3_TestNG.preConditions()[pri:0, instance:testNG_Scripts.profileCreationSuite3_TestNG@1e88b3c]">&gt;&gt;preConditions</td> 
-<td>&nbsp;</td>  <td>main@1690287238</td>   <td></td> </tr>
+<tr bgcolor="76ae94">  <td>18/05/11 13:20:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PCApp_Script_006_A01.postConditions()[pri:0, instance:testNG_Scripts.PCApp_Script_006_A01@66a3ffec]">&lt;&lt;postConditions</td> 
+<td>&nbsp;</td>  <td>main@540159270</td>   <td></td> </tr>
+<tr bgcolor="76ae94">  <td>18/05/11 13:19:51</td>   <td>-33759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PCApp_Script_006_A01.preConditions()[pri:0, instance:testNG_Scripts.PCApp_Script_006_A01@66a3ffec]">&gt;&gt;preConditions</td> 
+<td>&nbsp;</td>  <td>main@540159270</td>   <td></td> </tr>
+<tr bgcolor="76ae94">  <td>18/05/11 13:20:08</td>   <td>-17460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PCApp_Script_006_A01.run()[pri:0, instance:testNG_Scripts.PCApp_Script_006_A01@66a3ffec]">run</td> 
+  <td>main@540159270</td>   <td></td> </tr>
 </table>
